--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,14 @@ input, button, select, a{ font: inherit; }
 .header_left{
     width: 50%;
 }
+.middle{
+    height: 90vh;
+    background-color: blue;
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+.centerimg{
+    width: 90%;
+    height: 60%;
+}
