--- a/src/App.css
+++ b/src/App.css
@@ -135,3 +135,19 @@ input, button, select, a{ font: inherit; }
  padding-top:40px;
  padding-bottom:40px;
 }
+.fitems{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+.item{
+    width: 220px;
+    text-align: center;
+}
+.icon{
+    font-size: 54px;
+    padding: 10px;
+    background-color:var(--primary);
+    color:var(--white);
+    border-radius: 10px;
+}
